tests/fixtures/invalid/min_str_int.py
# Cannot call min() with Str, Int
x = min("hello", 1)
